# magazine

marketplace_project/: .pre-commit-config.yaml  db.sqlite3  pyproject.toml
marketplace_project/home/: views.py
marketplace_project/locale/en/LC_MESSAGES/: django.po
marketplace_project/locale/es/LC_MESSAGES/: django.po
marketplace_project/locale/uk/LC_MESSAGES/: django.po
marketplace_project/marketplace_project/: settings.py  urls.py
marketplace_project/orders/: forms.py  models.py  telegram_utils.py  views.py
marketplace_project/orders/migrations/: 0003_order_address_order_city_order_full_name_order_phone_and_more.py  0004_order_comment_order_delivery_department_and_more.py
marketplace_project/orders/templates/orders/: cart.html  order_create.html  order_detail.html  order_list.html
marketplace_project/products/: ai_utils.py  urls.py  views.py
marketplace_project/products/templates/products/: product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
marketplace_project/products/templates/products/partials/: ai_answer.html  ai_widget.html
marketplace_project/reviews/templates/reviews/: review_form.html  review_list.html  seller_reviews.html
marketplace_project/static/css/: main.css
marketplace_project/templates/: base.html  navbar.html
marketplace_project/users/: views.py
marketplace_project/users/templates/users/: login.html  profile.html  profile_edit.html  register.html
