[tool.poetry]
name = "marketplace_project"
version = "0.1.0"
description = "Маркетплейс на Django"
authors = ["Твоє Ім'я <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.4"
django-filter = "^24.2"
django-htmx = "^1.17.0"
django-render-block = "^0.9.2"
psycopg2-binary = "^2.9.9"
gunicorn = "^23.0.0"
lock = "^2018.3.25.2110"

[tool.poetry.group.dev.dependencies]

flake8 = "^7.1.1"
pre-commit = "^3.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
